// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render correctly 1`] = `
<Component
  replacements={
    Object {
      "testElement": <Text />,
    }
  }
  textKey="mock"
>
  <Component
    textKey="mock"
  >
    <Text>
      <react-native-mock>
        <Component
          key="0"
        >
          <Text>
            <react-native-mock />
          </Text>
        </Component>
         mock
      </react-native-mock>
    </Text>
  </Component>
</Component>
`;

exports[`should replace placeholders correctly 1`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
     mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 2`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
    mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 3`] = `
<View>
  <react-native-mock>
    {somethingelse}
     mock
  </react-native-mock>
</View>
`;

exports[`should replace placeholders correctly 4`] = `
<View>
  <react-native-mock>
    <Component
      key="0"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
     mock 
    <Component
      key="2"
    >
      testing
    </Component>
     mock 
    <Component
      key="4"
    >
      <View>
        <react-native-mock />
      </View>
    </Component>
  </react-native-mock>
</View>
`;
